# passive-tuning-of-mass-dampers

./: .gitignore  README.md  pyproject.toml
configs/: algorithms.toml  project.toml  records.toml
scripts/: prepare_ground_motions.py
src/tmd/: __init__.py  analysis.py  benchmarks.py  cli.py  io.py  models.py  opensees_model.py  optimizers.py  reference.py  reporting.py  spectra.py  state_space.py  types.py  workflows.py
tests/: test_models.py  test_opensees_model.py  test_optimizers.py  test_paper_alignment.py  test_paper_regression.py  test_spectra.py  test_state_space.py  test_workflows.py
